--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <!-- user-component.component.html -->
-<div class="user-component">
+<div *ngIf="!isClosed" class="user-component">
     <nav>
       <button (click)="toggleView()">User</button>
       <button (click)="toggleView()">Notifications ({{ user.notifications.length }})</button>
@@ -9,10 +9,11 @@
         <div class="user-info">
             <h3>Name: {{ user.name }}</h3>
             <p>Age: {{ user.age }}</p>
-            <p>Status: {{ user.status }}</p>
+            <p>Status: {{ user.status | uppercase }}</p>
           
-            <!-- Tipo de suscripción -->
+            
             <div class="subscription-type">
+              <h4>Subscription Type:</h4>
               <span (click)="changeSubscriptionType('free')" 
                     [ngClass]="{'selected': user.subscriptionType === 'free'}">
                 Free
@@ -27,27 +28,32 @@
           
             <!-- Redes sociales no suscritas -->
             <h4>Social Networks</h4>
-            <div *ngFor="let network of getUnsubscribedSocialNetworks()" 
-                 class="social-network-box" [ngStyle]="{'background-color': networkColor[network.platform]}">
-              {{ network.platform }}
-              <button (click)="addSubscription(network.id)" class="add-btn">+</button>
+            <div class="social-network-box-container">
+              <div *ngFor="let network of getUnsubscribedSocialNetworks()" 
+                   class="social-network-box" 
+                   [ngStyle]="{'background-color': networkColor[network.platform]}">
+                {{ network.platform | titlecase }}
+                <button (click)="addSubscription(network.id)" class="add-btn">+</button>
+              </div>
             </div>
-          
-            <!-- Redes sociales suscritas -->
             <h4>Subscriptions</h4>
-            <div *ngFor="let networkId of user.subscriptions" 
-                 class="social-network-box" 
-                 [ngStyle]="{'background-color': networkColor[getPlatformById(networkId)]}">
-              {{ getPlatformById(networkId) }}
-              <button (click)="removeSubscription(networkId)" class="remove-btn">x</button>
+            <div class="social-network-box-container">
+              <div *ngFor="let networkId of user.subscriptions" 
+                   class="social-network-box" 
+                   [ngStyle]="{'background-color': networkColor[getPlatformById(networkId)]}">
+                {{ getPlatformById(networkId) | titlecase }}
+                <button (click)="removeSubscription(networkId)" class="remove-btn">x</button>
+              </div>
             </div>
-          
-            <button (click)="closeAccount()" class="close-account-btn">Close Account</button>
-          </div>
     </div>
+
+    <button (click)="closeAccount()" class="close-account-btn">Close Account</button>
+  </div>
+</div>
+
   
     <div *ngIf="showNotifications">
       <app-notifications [notifications]="user.notifications"></app-notifications>
     </div>
-  </div>
+  
   
