--- a/src/app/notification/notification.component.html
+++ b/src/app/notification/notification.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let notification of notifications" 
      [ngStyle]="{'background-color': getColor(notification)}"
      class="notification-box">
-  {{ notification }}
+  {{ notification | titlecase }}
 </div> <!-- social-networks.component.html -->
 <div class="social-networks"><!-- user-component.component.html -->
