--- a/src/app/notification/notification.component.scss
+++ b/src/app/notification/notification.component.scss
@@ -2,7 +2,7 @@
   padding: 10px;
   margin: 5px 0;
   border-radius: 5px;
-  color: white; // Texto en blanco para mejor contraste
+  color: rgb(170, 170, 170); 
   font-weight: bold;
   text-align: center;
 }
