--- a/src/app/social-network/social-network.component.html
+++ b/src/app/social-network/social-network.component.html
@@ -2,7 +2,13 @@
 <div class="social-networks">
     <div *ngFor="let network of socialNetworks" class="card" [ngClass]="network.platform">
       {{ network.platform }}
-      <span *ngIf="network.platformType === 'premium'">⭐</span>
+      <button (click)="sendNotification(network)">
+        {{ getButtonText(network.platform) | titlecase}}
+      </button>
+      <div class="network-content">
+        {{ network.platform | titlecase }}
+        <span *ngIf="network.platformType === 'premium'">⭐</span>
+      </div>
     </div>
   </div>
   
