--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="users-container">
-  <div class="users">
-    <div *ngFor="let user of users; let i = index" class="user-wrapper">
-      <app-user [user]="user"></app-user>
-    </div>
-  </div>
-</div>
+<router-outlet> </router-outlet>
