--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -131,6 +131,12 @@
         <input type="text" ngModel name="phoneF">
         <button type="submit">send data</button>
         <button type="reset"> reset</button>
+        
+
+        <p>REACTIVE FORM</p>
+        <input type="text" [formControl]="scoreControl">
+        <button (click)="onPrintScore()"> Print Score</button>
+        
       </form>
   </mat-card-content>
   <mat-card-actions>
