--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -136,7 +136,23 @@
         <p>REACTIVE FORM</p>
         <input type="text" [formControl]="scoreControl">
         <button (click)="onPrintScore()"> Print Score</button>
-        
+
+        <p>FORM GROUP</p>
+        <form [formGroup]="studentForm">
+          <p>name</p>
+          <input type="text" [formControlName]="'name'">
+          <p>score</p>
+          <input type="text" [formControlName]="'score'">
+          <p>school</p>
+          <input type="text" [formControlName]="'school'">
+          <p>proffesor</p>
+          <input type="text" [formControlName]="'professor'">
+          <p>university</p>
+          <input type="text" [formControlName]="'university'">
+        </form>
+        <button (click)="onSendData()" 
+        [disabled]="studentForm.invalid"> send data</button>
+
       </form>
   </mat-card-content>
   <mat-card-actions>
