--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -194,7 +194,7 @@
 <p>NAVEGATION</p>
 
 
-<div style="border: 4cqmax solid greenyellow;height: 500px ; width: 500px;">
+
 <button type="button" class="btn btn-light" [routerLink]="['card', 8]">User Card</button>
 <button type="button" class="btn btn-light" (click)="goToCard()">User Card TS</button>
 <button type="button" class="btn btn-dark" [routerLink]="'/cal1'" [queryParams]="{ name: 'test', lastname: 'perez' }">Calculator querry html</button>
@@ -205,6 +205,8 @@
 <button type="button" class="btn btn-danger" [routerLink]="'/student/average'"> Student/score/average</button>
 
 <button type="button" class="btn btn-secondary" (click)="goToStudentModule()"> from TS to student Module</button>
+
+<div style="border: 4cqmax solid greenyellow;height: 500px ; width: 500px;"></div>
 
 
 <router-outlet>
