--- a/src/app/student/average/average.component.html
+++ b/src/app/student/average/average.component.html
@@ -1,2 +1,5 @@
-<p>average works!</p>
-<button (click)="onPrint()">print user</button>
+<div style="border: 3px solid purple; height: 300px; width: 250px;">
+    <p>average works!</p>
+    <button (click)="onPrint()">print user</button>
+    <button (click)="onSend()">send new scores</button>
+</div>
