[04-11-2024] Deploy Login in Firebase and AWS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,213 +1,1 @@
-<h1>Hello, {{ title + 20 }}</h1>
-<p>Add {{ sum(3, 5) }}</p>
-<p>FOR {{ getArray() }}</p>
-
-<button (click)="userCardCreated = !userCardCreated">
-  create and destroy user card
-</button>
-
-<button (click)="selectedUser = users[0]">Change to user 0</button>
-<button (click)="selectedUser = users[1]">Change to user 1</button>
-
-@if(userCardCreated){
-<user-card
-  [name]="selectedUser.name"
-  [email]="selectedUser.email"
-  (sendData)="receiveData($event)"
->
-  <p>My HTML from Father</p>
-  <button>My Button from Father</button>
-</user-card>
-
-} @else {
-<p>user card destroyed</p>
-}
-
-<p>RESULT: {{ result }}</p>
-
-<calculator
-  (sum)="onResult($event)"
-  (mul)="onResult($event)"
-  (reset)="onResult($event)"
->
-</calculator>
-
-<p *ngIf="var1 === var2; else elseOld">variables are equals</p>
-
-<ng-template #elseOld>
-  <p>old, result is false</p>
-</ng-template>
-
-@if(var1 === var2){
-<p>new Sintax, variables are equals</p>
-} @else {
-<p>new Sintax, is false</p>
-}
-
-<p *ngFor="let item of ['a', 'b', 'c', 'd']; let i = index">
-  old for, value: {{ item }}, index: {{ i }}
-</p>
-
-@for (item of ['a','b','c','d','e','f','g','h']; track item) {
-<p>new for, {{ item }}</p>
-}
-
-<div [ngSwitch]="var1">
-  <p *ngSwitchCase="0">var is 0</p>
-  <p *ngSwitchCase="1">var is 1</p>
-  <p *ngSwitchDefault>default value</p>
-</div>
-
-@switch(var1){ @case(0) {
-<p>new Sintax, var is 0</p>
-} @case(1) {
-<p>new Sintax, var is 1</p>
-} @default {
-<p>new Sintax, default</p>
-} }
-
-<app-person-list></app-person-list>
-
-<counter></counter>
-
-<button (click)="var1 = var1 + 1">Increment Var1</button>
-<p>{{ var1 }}</p>
-
-<button (click)="addVideo()">ADD new Video to Youtube</button>
-
-<div
-  [ngColors]="'green'"
-  [defaultColor]="'pink'"
-  (colorClick)="getColor($event)"
-  (colorDoubleClick)="getColor($event)"
-  style="border: 1px solid orange"
->
-  My CUSTOM ATTRIBUTE
-</div>
-
-<button (click)="userCardCreated = !userCardCreated">Change userCardCreated</button> 
-{{userCardCreated}}
-<div *ngCreateHtml="userCardCreated" (sendMessage)="getColor($event)"> 
-  <p>MY CUSTOM STRUCTURAL DIRECTIVE</p>
-  <p> Example </p>
-</div>
-
-
-
-<button (click)="students.push(12)">add new number</button>
-<button (click)="addNumber()">add new number in ts</button>
-
-<mat-card class="example-card" appearance="outlined">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <form #testForm="ngForm" (ngSubmit)="onSubmit(testForm)">
-        <p>name</p>
-            <input type="text" 
-        #nameT="ngModel" 
-        name="nameF" 
-        ngModel 
-        required>
-        <div *ngIf="nameT.invalid && nameT.touched" style="color: red;">
-            THERE IS AN ERROR
-        </div>
-        <p>{{ nameT.invalid | json}} </p>
-        <p>{{ nameT.touched | json}} </p>
-
-        <p>lastname</p>
-        <input type="text" ngModel name="lastnameF">
-        <p>age</p>
-        <input type="text" ngModel name="ageF">
-        <p>city</p>
-        <input type="text" ngModel name="cityF">
-        <p>phone</p>
-        <input type="text" ngModel name="phoneF">
-        <button type="submit">send data</button>
-        <button type="reset"> reset</button>
-         </form>
-        
-
-        <p>REACTIVE FORM</p>
-        <input type="text" [formControl]="scoreControl">
-        <button (click)="onPrintScore()"> Print Score</button>
-
-        <p>FORM GROUP</p>
-        <form [formGroup]="studentForm">
-          <p>name</p>
-          <input type="text" [formControlName]="'name'">
-          <!-- <div *ngIf="studentForm.get('name')?.errors?.required">
-            name is required
-          </div> -->
-        <div *ngIf="studentForm.get('name')?.invalid && studentForm.get('name')?.touched">
-            NAME IS required
-          </div>
-          <button (click)="print()"> print name control</button>
-
-          <p>score</p>
-          <input type="text" [formControlName]="'score'">
-          <p>school</p>
-          <input type="text" [formControlName]="'school'">
-          <p>proffesor</p>
-          <input type="text" [formControlName]="'professor'">
-          <p>university</p>
-          <input type="text" [formControlName]="'university'">
-        </form>
-        <button (click)="onSendData()" 
-        [disabled]="studentForm.invalid"> send data</button>
-
-    
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>
-
-<h1 class="text-sm font-bold underline text-red-800">
-  Hello world TAILWIND!
-</h1>
-
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Email address</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
-
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
-
-<button type="button" class="btn btn-link">Link</button>
-
-<p>NAVEGATION</p>
-
-
-
-<button type="button" class="btn btn-light" [routerLink]="['card', 8]">User Card</button>
-<button type="button" class="btn btn-light" (click)="goToCard()">User Card TS</button>
-<button type="button" class="btn btn-dark" [routerLink]="'/cal1'" [queryParams]="{ name: 'test', lastname: 'perez' }">Calculator querry html</button>
-<button type="button" class="btn btn-dark" (click)="onCalculator()">Calculator querry TS</button>
-<button type="button" class="btn btn-warning" [routerLink]="'/counter-nav'">Counter</button>
-<button type="button" class="btn btn-success" [routerLink]="'/student'">Student Module</button>
-<button type="button" class="btn btn-success" [routerLink]="'/student/classmate'"> Classmate </button>
-<button type="button" class="btn btn-danger" [routerLink]="'/student/average'"> Student/score/average</button>
-
-<button type="button" class="btn btn-secondary" (click)="goToStudentModule()"> from TS to student Module</button>
-
-<div style="border: 4cqmax solid greenyellow;height: 500px ; width: 500px;"></div>
-
-
-<router-outlet>
-</router-outlet>
+<router-outlet> </router-outlet>
